cli/tests/snapshots/integration__run_wasm@Invalid.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
STDERR
warning: Invalid module name

Module names must begin with a lowercase letter and contain only lowercase
alphanumeric characters or underscores.

Hint: Rename `Invalid.gleam` to be valid, or remove this file from the
project
source.

error: no module to run

`Invalid.gleam` was not compiled into a module.

Hint: A module is named after the path of its file, which has to be a
`.gleam` file under the current directory.
