cli/tests/snapshots/integration__run_wasm@bit_array.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
<<1, 2>>
<<1, 44>>
<<1, 44>>
<<63, 192, 0, 0>>
<<0, 104, 0, 105>>
7
258
-1
258
<<20, 30>>
<<9, 9>>
3
42
STDERR
